Изменения в контактной информации

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">Instagram anastasia_groskop<br>
-      Tel. +79111131091 
+      Tel.: +79111131091 <br>
+      E-mail:anagroskop@yandex.ru
       </div>
     </header>
     <section class="hero-image">
@@ -49,7 +50,9 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        Instagram anastasia_groskop<br>
+        Tel.: +79111131091 <br>
+        E-mail:anagroskop@yandex.ru
     </div>
     </footer>
   </body>
