--- a/index.html
+++ b/index.html
@@ -1,59 +1,42 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <title>Магазин товаров для дома</title>
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
-
   <body>
-    <header class="page-header">
-      <div class="container">Instagram anastasia_groskop<br>
-      Tel.: +79111131091 <br>
-      E-mail:anagroskop@yandex.ru
+    <header class="site-header">
+      <div class="container">
+        <h1>Gloevk</h1>
+        <p>Разнообразные товары для дома с доставкой по всей планете</p>
+        <img src="img/gloevk-examples.png" width="510" height="80" alt="Примеры интерьеров">
       </div>
     </header>
-    <section class="hero-image">
-      <div class=container>
-        <h1 class="heading">Гроскоп Анастасия</h1>
-        <p>Junior верстальщик</p>
+
+    <section class="features">
+      <h2>Что поможет вам создать домашний уют?</h2>
+      <p class="feature-furniture">Мебель и фурнитура</p>
+      <p class="feature-lighting">Лампы и торшеры</p>
+      <p class="feature-accessories">Аксессуары и мелочи</p>
+    </section>
+
+    <section class="advantages">
+      <h2>Что выделяет нас среди конкурентов?</h2>
+      <ul class="advantages-list">
+        <li class="advantages-item">Используем только природные материалы</li>
+        <li class="advantages-item standard">Ежедневные отчёты о ходе работ</li>
+        <li class="advantages-item standard">Сами соберём мебель для вас</li>
+        <li class="advantages-item vip">Бесплатное гарантийное обслуживание в течение 10 лет</li>
+        <li class="advantages-item vip">Доставка в день заказа</li>
+      </ul>
+    </section>
+
+    <footer class="site-footer">
+      <div class="container">
+        <p>© Кекс, 2020</p>
+        <p>Магазин товаров для дома</p>
       </div>
-    </section>
-    
-
-    <section class="intro">
-      <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
-      <p>Привет, меня зовут Настя и я пытаюсь стать профессиональным верстальщиком<br>
-         Так же я с большим удовольствием рисую в разных стилях.
-      </p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Могу сверстать вам супер сайт! Совместим ваше видение и мою креативность? <br>
-         Принимаю заказы на роспись стен и иллюстрации для себя и в подарок близким)
-      </p>
-    </div>
-    </section>
-
-    <section class="portfolio">
-      <div class="container">
-      <h2 class="subheading">Мои работы</h2>
-
-      <h3>Магазин товаров для дома</h3>
-      <p>Мой первый сайт.</p>
-
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
-    </div>
-    </section>
-
-    <footer class="page-footer">
-      <div class="container">
-        Instagram anastasia_groskop<br>
-        Tel.: +79111131091 <br>
-        E-mail:anagroskop@yandex.ru
-    </div>
     </footer>
   </body>
 </html>
