--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
       <figure class="user-image">
-        <img src="files/user.jpg" width="928" height="536" alt="Фото Анастасии Гроскоп"> </figure>
+        <img src="img/user.jpg" width="928" height="536" alt="Фото Анастасии Гроскоп"> </figure>
       <h3>Пара слов о себе</h3>
       <p>Привет, меня зовут Настя и я пытаюсь стать профессиональным верстальщиком<br>
          Так же я с большим удовольствием рисую в разных стилях.
@@ -46,7 +46,7 @@
 
       <h3>Магазин товаров для дома</h3>
       <figure class="project-image">
-       <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+       <img src="img/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
       </figure>
       <p>Мой первый сайт.</p>
       <a class="button" href="source/project/index.html">Открыть страницу</a>
